force-app/main/default/objects/Job_Application__c/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <description>When to follow up</description>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>