force-app/main/default/objects/Job_Application__c/fields/Hiring_Company__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring Company</label>
    <referenceTo>Hiring_Company__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>