force-app/main/default/objects/Job_Application__c/fields/Job_Application_Contact__c.field-meta.xml
<CustomField>
    <fullName>Job_Application_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Application Contact</label>
    <referenceTo>Job_Application_Contact__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>