force-app/main/default/objects/Job_Application__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>City, region, or &quot;Remote&quot;</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>