force-app/main/default/objects/Job_Application__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <description>Offered or expected salary</description>
    <label>Salary</label>
    <length>50</length>
    <type>Text</type>
</CustomField>