force-app/main/default/objects/Job_Application__c/fields/Salary_Range_High__c.field-meta.xml
<CustomField>
    <fullName>Salary_Range_High__c</fullName>
    <label>Salary Range High</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>