force-app/main/default/objects/Job_Application__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Name of job board or &quot;manual&quot; for manual entry</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>