force-app/main/default/objects/Job_Application__c/fields/Stale_Flag__c.field-meta.xml
<CustomField>
    <fullName>Stale_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stale Flag</label>
    <type>Checkbox</type>
</CustomField>