force-app/main/default/objects/Job_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Tracks the current stage of the job application.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saved</fullName>
                <default>true</default>
                <label>Saved</label>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Interviewing</fullName>
            </value>
            <value>
                <fullName>Offer Received</fullName>
            </value>
            <value>
                <fullName>Closed - Offer Declined</fullName>
            </value>
            <value>
                <fullName>Closed - Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Closed - No offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>