force-app/main/default/objects/Job_Application__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Job type (full-time, part-time, etc.).</description>
    <inlineHelpText>Enter the job type (full-time, part-time, etc)</inlineHelpText>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>